Fix: correct alignment for testimonial-slider compnent

--- a/fractal/components/02_molecules/long-copy/long-copy.scss
+++ b/fractal/components/02_molecules/long-copy/long-copy.scss
@@ -7,7 +7,7 @@
 		margin-bottom: 32px;
 	}
 
-	@media (max-width: 950px) {
+	@media (max-width: 1050px) {
 		padding: 64px;
 	}
 
