--- a/fractal/components/02_molecules/testimonial-slider/testimonial-slider.scss
+++ b/fractal/components/02_molecules/testimonial-slider/testimonial-slider.scss
@@ -78,7 +78,7 @@
       &__content,
       .content {
         grid-area: content;
-        align-self: flex-end;
+        align-self: flex-start;
 
         &__icon {
           font-size: 80px;
